# dev-agent-orchestrator

./: .gitignore  ACTIVE_DIRECTION.md  ARCHITECT_TASK_SPEC.md  AUDIT_FINDINGS.md  CHECKPOINT_2026-04-16.md  CONTROLLER_WORKED_EXAMPLES.md  CORE_REQUIREMENTS.md  DEVELOPMENT_PLAN_BoundedContextMultiAgent.prompt.md  INSTALLATION_GUIDE.md  MODEL_AND_AGENT_CONFIG.md  MULTI_AGENT_PROMPT_ARCHITECTURE.md  PROMPTS_AND_INSTRUCTIONS_STATUS.md  README.md  ROUTING_AND_ESCALATION_POLICY.md  TASK_PACKET_CONTRACT.md  install.py  main.py  models.json  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/agents/: README.md  architect.agent.md  controller.agent.md  copilot-workflow-runner.agent.md  developer.agent.md  reviewer.agent.md  tester.agent.md
.github/skills/: README.md
.github/skills/bounded-context-packets/: SKILL.md
.github/skills/code-quality-principles/: SKILL.md
.github/skills/grill-me-relentlessly/: SKILL.md
.github/workflows/: ci.yml
integration_layer/: __init__.py  installer.py
runtime/: __init__.py  agent.py  ledger.py  models.py  packets.py  router.py  runner.py
src/: __init__.py  git_manager.py  parallel_graph.py  parallel_graph_v2.py  qwen_code_adapter.py  task_archiver.py
src/workflow/: __init__.py  graph_builder.py  nodes.py  state.py
tests/: __init__.py  test_agents.py  test_git_manager.py  test_multi_platform_integration_layer.py  test_parallel_workflow.py  test_runtime_ledger.py  test_runtime_models.py  test_runtime_packets.py  test_runtime_router.py  test_runtime_runner.py  test_workflow_v2.py
