[project]
name = "orchestrator"
version = "0.1.0"
requires-python = ">=3.14"

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "basic"
include = ["runtime", "integration_layer", "install.py"]
executionEnvironments = [
  { root = "runtime", reportMissingModuleSource = "none" },
]
